# sk

./: .gitattributes  .gitignore  README.md  create_feather.py  main.py  pyproject.toml  requirements.txt  utils.py
.cursor/rules/: data-analysis.mdc  data_source.mdc  file-organization.mdc  japanese-ui.mdc  project.mdc  python.mdc  streamlit.mdc
.github/workflows/: ci.yml
data/2025/10/中国/: 31_鳥取_届出受理医療機関名簿.xlsx  32_島根_届出受理医療機関名簿.xlsx  33_岡山_届出受理医療機関名簿.xlsx  35_山口_届出受理医療機関名簿.xlsx
data/2025/10/中部/: 2510（三重医科）届出受理医療機関名簿.xlsx  2510（富山医科）届出受理医療機関名簿.xlsx  2510（岐阜医科）届出受理医療機関名簿.xlsx  2510（石川医科）届出受理医療機関名簿.xlsx  2510（静岡医科）届出受理医療機関名簿.xlsx
data/2025/10/九州/: r7_10_shisetsu_kagoshima_ika_02.xlsx  r7_10_shisetsu_kumamoto_ika_02.xlsx  r7_10_shisetsu_miyazaki_ika_02.xlsx  r7_10_shisetsu_nagasaki_ika_02.xlsx  r7_10_shisetsu_okinawa_ika_02.xlsx  r7_10_shisetsu_ooita_ika_02.xlsx  r7_10_shisetsu_saga_ika_02.xlsx
data/2025/10/北海道/: 000415636.xlsx
data/2025/10/四国/: 02_01 香川 医科 届出受理医療機関名簿.xlsx  02_04 徳島 医科 届出受理医療機関名簿.xlsx  02_07 愛媛 医科 届出受理医療機関名簿.xlsx  02_10 高知 医科 届出受理医療機関名簿.xlsx
data/2025/10/近畿/: 2025.10_sisetukijun_fukui_ika.xlsx  2025.10_sisetukijun_nara_ika.xlsx  2025.10_sisetukijun_wakayama_ika.xlsx  s2025.10_sisetukijun_kyoto_ika.xlsx  s2025.10_sisetukijun_shiga_ika.xlsx
data/2025/10/関東/: 08届出受理医療機関名簿（医科）茨城r0710.xlsx  (+7 more)
dataframes/: __init__.py  cross_tabulation.py  filing_status.py  jaccard_similarity.py  shisetsu_kijun.py
pages/: 1_医療機関検索.py  2_届出状況一覧.py  2_特定医療機関の届出状況.py  3_特定医療機関の届出状況.py  3_類似医療機関分析.py  4_届出状況一覧.py  4_施設基準別届出数.py  4_類似医療機関分析.py  5_届出医療機関検索.py
